<resources>
    <string name="app_name">EasyShop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="my_account">החשבון שלי</string>
    <string name="my_supermarket">הסופר שלי</string>
    <string name="my_list">הרשימה שלי</string>
    <string name="easyshop" translatable="false">EasyShop</string>
    <string name="hello_name">שלום, ישראל ישראלי</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">מייל</string>
    <string name="prompt_password">סיסמא</string>
    <string name="action_sign_in">התחבר</string>
    <string name="action_register">הרשם</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="choose_supermarket">בחר את הסופר שלך</string>
    <string name="superMarket1">שופרסל</string>
    <string name="superMarket2">רמי לוי</string>
    <string name="superMarket3">ינות ביתן</string>
    superMarket3
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>