<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_myAccount">

    <fragment
        android:id="@+id/nav_myAccount"
        android:name="com.example.easyshop.ui.home.HomeFragment"
        android:label="@string/my_account"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_mySupermarket"
        android:name="com.example.easyshop.ui.gallery.GalleryFragment"
        android:label="@string/my_supermarket"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_myList"
        android:name="com.example.easyshop.ui.slideshow.SlideshowFragment"
        android:label="@string/my_list"
        tools:layout="@layout/fragment_slideshow" />
    <activity
        android:id="@+id/mainActivity"
        android:name="com.example.easyshop.MainActivity"
        android:label="app_bar_main"
        tools:layout="@layout/app_bar_main" />
    <activity
        android:id="@+id/loginActivity"
        android:name="com.example.easyshop.ui.login.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />
</navigation>