<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment">

    <TextView
        android:id="@+id/chooseSupermarket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/choose_supermarket"
        android:textColor="#4CAF50"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ScrollView
            android:layout_width="409dp"
            android:layout_height="500dp"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/superMarket1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/superMarket1"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/superMarket2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/superMarket2"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/superMarket3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/superMarket3"
                    android:textSize="24sp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>